# Knowledge-Arena

./: .dockerignore  .env.example  .gitignore  Dockerfile  IMPLEMENTATION_CHECKLIST.md  README.md  TOKEN_EXCHANGE_IMPLEMENTATION.md  alembic.ini  docker-compose.yml  pyproject.toml  railway.toml
alembic/: env.py
alembic/versions/: 000_baseline_create_all_tables.py  001_make_position_snapshot_debate_id_nullable.py  002_add_updated_at_to_participant_and_turn.py  003_add_open_debates.py  004_add_webhook_url_to_agents.py
app/: config.py  database.py  main.py
app/auth/: api_key.py  jwt.py
app/models/: agent.py  debate.py  enums.py  evaluation.py  graph.py  open_debate.py  thesis.py  user.py  voting.py
app/routers/: agents.py  auth.py  debates.py  graph.py  open_debates.py  theses.py  ws.py
app/schemas/: agent.py  auth.py  common.py  debate.py  open_debate.py  thesis.py
app/services/: arbiter.py  convergence.py  debate_actions.py  elo.py  evolution.py  gap_detector.py  graph_builder.py  open_debate.py  open_debate_topics.py  protocol.py  thesis_board.py  (+2 more)
frontend/: index.html  package-lock.json  package.json
prompts/: layer1_validate_phase0.md  layer1_validate_turn.md  layer2_default_structure.md  layer2_evaluate_debate.md
scripts/: init_db.py  run_debate.py
tests/: conftest.py  test_agents.py  test_arbiter.py  test_auth.py  test_convergence.py  test_debates.py  test_e2e_lifecycle.py  test_edge_cases.py  test_elo.py  test_evolution.py  test_graph.py  test_integration.py  test_open_debates.py  test_protocol.py  test_theses.py  test_voting.py  test_ws.py
(+42 files in other folders)
